# llm-registry

./: .dockerignore  .env.example  .env.production  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json
.github/workflows/: npm-publish.yml
config/: default.toml  development.toml  production.toml
crates/llm-registry-api/: Cargo.toml  build.rs
crates/llm-registry-api/proto/: registry.proto
crates/llm-registry-api/src/: auth.rs  auth_handlers.rs  error.rs  handlers.rs  jwt.rs  lib.rs  metrics_middleware.rs  middleware.rs  rate_limit.rs  rbac.rs  responses.rs  routes.rs
crates/llm-registry-api/src/graphql/: mod.rs  mutation.rs  query.rs  types.rs
crates/llm-registry-api/src/grpc/: converters.rs  mod.rs  service.rs
crates/llm-registry-core/: Cargo.toml
crates/llm-registry-core/src/: asset.rs  checksum.rs  dependency.rs  error.rs  event.rs  lib.rs  provenance.rs  storage.rs  types.rs
crates/llm-registry-db/: Cargo.toml
crates/llm-registry-db/migrations/: 20250117000001_initial_schema.sql
crates/llm-registry-db/src/: cache.rs  error.rs  event_store.rs  lib.rs  nats_publisher.rs  pool.rs  postgres.rs  repository.rs
crates/llm-registry-server/: Cargo.toml
crates/llm-registry-server/src/: config.rs  main.rs  metrics.rs  telemetry.rs  tracing_setup.rs
crates/llm-registry-service/: Cargo.toml
crates/llm-registry-service/src/: dto.rs  error.rs  integrity.rs  lib.rs  registration.rs  search.rs  validation.rs  versioning.rs
deployments/: prometheus.yml
deployments/grafana/provisioning/dashboards/: default.yml
deployments/nginx/: nginx.conf
deployments/nginx/conf.d/: api.conf
docs/: API_REFERENCE.md  ARCHITECTURE.md  DOCKER_README.md  NPM_PUBLISHING.md  SECURITY.md
helm/llm-registry/: Chart.yaml  README.md  values.yaml
helm/llm-registry/templates/: NOTES.txt  _helpers.tpl
helm/llm-registry/templates/configmaps/: configmap.yaml
helm/llm-registry/templates/deployment/: deployment.yaml
helm/llm-registry/templates/ingress/: ingress-grpc.yaml  ingress-http.yaml
helm/llm-registry/templates/monitoring/: hpa.yaml  servicemonitor.yaml
helm/llm-registry/templates/security/: networkpolicy.yaml  poddisruptionbudget.yaml  rbac.yaml  secret.yaml  serviceaccount.yaml
helm/llm-registry/templates/service/: service.yaml
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  nats.yaml  networkpolicy.yaml  pdb.yaml  postgres.yaml  redis.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: build.sh  deploy.sh  helm-install.sh  helm-manage.sh  helm-uninstall.sh
src/: lib.rs
tests/: README.md  api_tests.rs  auth_tests.rs  rate_limit_tests.rs  rbac_tests.rs
tests/common/: fixtures.rs  mod.rs
