[package]
name = "llm-registry-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "llm-registry-server"
path = "src/main.rs"

[dependencies]
# Internal crates
llm-registry-core = { path = "../llm-registry-core" }
llm-registry-db = { path = "../llm-registry-db" }
llm-registry-service = { path = "../llm-registry-service" }
llm-registry-api = { path = "../llm-registry-api" }

# Web framework
axum = { version = "0.8" }
tower = { version = "0.5" }
tower-http = { version = "0.6" }

# gRPC framework
tonic = { version = "0.11", features = ["gzip", "tls"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Configuration
config = { version = "0.14", default-features = false, features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.22"

# OpenTelemetry and metrics
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
prometheus = "0.13"
once_cell = "1.19"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Environment variables
dotenvy = "0.15"

# Signal handling
tokio-util = "0.7"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
