[package]
name = "llm-registry-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal crates
llm-registry-core = { path = "../llm-registry-core" }
llm-registry-db = { path = "../llm-registry-db" }

# Async runtime and traits
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"

# Error handling
thiserror = "1.0"

# Hashing algorithms
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Semantic versioning
semver = { version = "1.0", features = ["serde"] }

# Base64 encoding/decoding
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
